problem/CL1004/main.err
main.cpp:1:1: error: expected unqualified-id before numeric constant
    1 | 1919810
      | ^~~~~~~
